--- a/demo/app/App_Resources/Android/AndroidManifest.xml
+++ b/demo/app/App_Resources/Android/AndroidManifest.xml
@@ -13,15 +13,19 @@
 
     <application android:name="com.tns.NativeScriptApplication" android:allowBackup="true" android:icon="@drawable/icon"
         android:label="@string/app_name" android:theme="@style/AppTheme">
-        <activity android:name="co.fitcom.SplashScreen" android:label="@string/title_activity_kimera" android:configChanges="keyboardHidden|orientation|screenSize">
 
+        <activity android:name="com.tns.NativeScriptActivity" android:label="@string/title_activity_kimera" android:configChanges="keyboardHidden|orientation|screenSize">
+        </activity>
+
+        <activity android:name="co.fitcom.SplashScreen" android:noHistory="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+        
         <activity android:name="com.tns.ErrorReportActivity" />
+        
     </application>
 </manifest>
 
