--- a/demo/package.json
+++ b/demo/package.json
@@ -1,4 +1,8 @@
 {
+  "description": "NativeScript Application",
+  "license": "SEE LICENSE IN <your-license-filename>",
+  "readme": "NativeScript Application",
+  "repository": "<fill-your-repository-here>",
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-ios": {
@@ -9,8 +13,8 @@
     }
   },
   "dependencies": {
-    "nativescript-yourplugin": "file:..",
-    "tns-core-modules": "^2.2.0"
+    "nativescript-splashscreen2": "file:..",
+    "tns-core-modules": "2.2.1"
   },
   "devDependencies": {
     "babel-traverse": "6.7.6",
