--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -4,7 +4,9 @@
         "target": "es5",
         "sourceMap": true,
         "experimentalDecorators": true,
-        "noEmitHelpers": true
+        "emitDecoratorMetadata": true,
+        "noEmitHelpers": true,
+        "noEmitOnError": false
     },
     "exclude": [
         "node_modules",
